# marshmallow-toplevel

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yaml
marshmallow_toplevel/: __init__.py
tests/: test_top_level_schema.py
