[tool.poetry]
name = "marshmallow_toplevel"
version = "0.1.1"
description = "Validate top-level lists with all the power of marshmallow"
authors = ["Andrey Semakin <and-semakin@ya.ru>"]
license = "MIT"
packages = [{include = "marshmallow_toplevel"}]
homepage = "https://github.com/and-semakin/marshmallow_toplevel"
documentation = "https://github.com/and-semakin/marshmallow_toplevel"
repository = "https://github.com/and-semakin/marshmallow_toplevel"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
marshmallow = "^3.0.0"
pytest = "^5.3.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bugbear = "^19.8.0"
mypy = "^0.761"
isort = "^4.3.21"
pre-commit = "^1.20.0"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
