[tool.poetry]
name = "marshmallow-toplevel"
version = "0.1.2"
description = "Validate top-level lists with all the power of marshmallow"
authors = ["Andrey Semakin <and-semakin@ya.ru>"]
license = "MIT"
packages = [{include = "marshmallow_toplevel"}]
homepage = "https://github.com/and-semakin/marshmallow-toplevel"
documentation = "https://github.com/and-semakin/marshmallow-toplevel"
repository = "https://github.com/and-semakin/marshmallow-toplevel"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
marshmallow = ">=3.5,<4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bugbear = "^20.11.1"
mypy = "^0.790"
isort = "<5.0.0"
pre-commit = "^1.20.0"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
